--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,12 @@
-  {% include header.html %}
-    {{ content }}
-  {% include footer.html %}
+---
+layout: master
+---
+
+<div class="tl-ns serif fw1 lh mw6 center f4 mid-gray">
+  <h1> {{ page.title }} </h1>
+</div>
+<div class="tl-ns serif fw1 mbl lh-copy mw6 center f4 mid-gray">
+  <p> {{ page.date | date: "%B %-d %Y"}} </p>
+  {{ content }}
+</div>
 
