--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,10 @@
 layout: master
 ---
 
+{% include smallheader.html %}
+
 <div class="tl-ns serif fw1 lh mw6 center f4 mid-gray">
+  <a href="/blog.html">All posts</a>
   <h1> {{ page.title }} </h1>
 </div>
 <div class="tl-ns serif fw1 mbl lh-copy mw6 center f4 mid-gray">
