--- a/_includes/smallheader.html
+++ b/_includes/smallheader.html
@@ -1,5 +1,5 @@
     <header class="bg-green pvm">
-      <div class="tc">
+      <div class="mlm">
         <div class="dib mw4 mw-12-ns">
           <a href="/" class="fade" title="home"><img src="/img/logo.svg"></a>
         </div>
