Add content for writing page. Add Google Tag Manager. Clean up sufficiently to push.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,4 +12,5 @@
     <link href="/img/favicon.ico" rel="shortcut icon"/>
   </head>
   <body>
+  {% include googletagmanager.html %}
   {% include navbar.html %}
