--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,12 @@ layout: master
 
 {% include smallheader.html %}
 
-<div class="tl-ns serif fw1 lh mw6 center f4 mid-gray">
-  <a href="/blog.html">All posts</a>
-  <h1> {{ page.title }} </h1>
-</div>
-<div class="tl-ns serif fw1 mbl lh-copy mw6 center f4 mid-gray">
-  <p> {{ page.date | date: "%B %-d %Y"}} </p>
-  {{ content }}
-</div>
-
+<div class="tl-ns fw1 f3 mw6 center f4 mid-gray pam">
+  <a class="link" href="/blog.html">back to posts</a>
+  <h1>{{ page.title }}</h1>
+  <div class="lh">
+    <p>{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
+  </div>
+  <div class="lh-copy pts">
+    {{ content }}
+  </div>
