Move the post from _drafts to _post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ layout: master
 
 {% include smallheader.html %}
 
-<div class="tl-ns fw1 f3 mw6 center f4 mid-gray pam">
-  <a class="link" href="/blog.html">back to posts</a>
+<div class="tl-ns fw1 f3 mw7 center f4 mid-gray pam mbxl">
+  <a class="link" href="/blog.html">&lsaquo; back to posts</a>
   <h1>{{ page.title }}</h1>
   <div class="lh">
     <p>{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
