--- a/_includes/smallheader.html
+++ b/_includes/smallheader.html
@@ -1,7 +1,10 @@
-    <header class="bg-green pvm">
-      <div class="mlm">
-        <div class="dib mw4 mw-12-ns">
-          <a href="/" class="fade" title="home"><img src="/img/logo.svg"></a>
-        </div>
-      </div>
-    </header>
+<header class="bg-green pvm">
+  <div class="mlm v-mid">
+    <div class="dib v-mid mw4 mw-12-ns">
+      <a href="/" class="fade" title="home"><img src="/img/logo.svg"></a>
+    </div>
+    <div class="fr">
+      {% include navbar.html %}
+    </div>
+  </div>
+</header>
