Start styling internal contents of blogposts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,6 @@ layout: master
   <div class="lh">
     <p>{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
   </div>
-  <div class="lh-copy pts">
+  <div class="lh-copy pts post">
     {{ content }}
   </div>
