--- a/css/oneroom.scss
+++ b/css/oneroom.scss
@@ -5,7 +5,6 @@
 @import "normalize";
 @import "queries";
 @import "colors";
-
 @import "base";
 @import "box_sizing";
 @import "background_size";
@@ -45,7 +44,7 @@
 @import "white_space";
 @import "styles";
 @import "vertical_align";
-
 @import "heights";
 
 @import "mailchimp";
+@import "post";
