--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,16 @@ layout: master
 
 {% include smallheader.html %}
 
-<div class="tl-ns fw1 f3 mw7 center f4 mid-gray pam mbxl">
+<div class="tl-ns fw1 f3 mw7 center f4 mid-gray pam mbxl mtl">
   <a class="link" href="/blog.html">&lsaquo; back to posts</a>
+  <div class="mtm">
   <h1>{{ page.title }}</h1>
   <div class="lh">
-    <p>{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
+      <img class="img mw2 v-mid box br-circ ba bw1 bw0-ns b--near-white mrm" src="/img/{{ page.image }}"></img>
+      <p class="dib v-mid">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
   </div>
   <div class="lh-copy pts post">
     {{ content }}
+    {% include share.html %}
   </div>
+</div>
