--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
       <a class="link phs" href="/">Home</a>
       <a class="link phs" href="https://angel.co/oneroom/jobs">Jobs</a>
       <a class="link phs" href="mailto:scott@joinoneroom.com">Contact</a>
+      <a class="link phs" href="https://twitter.com/intent/user?screen_name=joinoneroom" target="_blank"><img class="img mw2 v-mid" src="/img/twitter-icon.svg"/></a>
     </div>
   </footer>
 
