--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -17,4 +17,15 @@ in Jekyll to apply classes to internal content rendered from markdown.
   a:hover   { color: $blue; }
   a:active  { color: $blue; }
 
+  blockquote {
+    font-style: italic;
+    font-weight: 400;
+    padding: 2em;
+  }
+
+  img {
+    padding: 1em;
+  }
+
 }
+
