Adds Intercom.io JS

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       <a class="link phs" href="https://twitter.com/intent/user?screen_name=joinoneroom" target="_blank"><img class="img mw2 v-mid" src="/img/twitter-icon.svg"/></a>
     </div>
   </footer>
-
+  {% include intercom.html %}
 </body>
 
 </html>
