--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A live online video classroom enabling rich interaction and discussion.">
     <meta name="author" content="oneroom">
-    <title>OneRoom</title>
+    <title>OneRoom {% if page.title %} | {{ page.title }} {% endif %}</title>
     <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,800,300' rel='stylesheet' type='text/css'>
     <link href="/css/oneroom.css" rel="stylesheet">
