--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,4 +16,10 @@
     {% else %}
       <p class="dib"><a class="link-reverse phs" href="/about.html">About</a></p>
     {% endif %}
+    
+     {% if page.title == "FAQs" %}
+      <p class="dib under"><a class="link-reverse phs" href="#">FAQs</a></p>
+    {% else %}
+      <p class="dib"><a class="link-reverse phs" href="/faq.html">FAQs</a></p>
+    {% endif %}
 </nav>
