Adds link to course catalog on index and in header.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,6 @@
 <nav class="center mw7 phm phl-ns pvxs fw4 tc">
+    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Classes</a></p>
+
     {% if page.title == "writing" %}
       <p class="dib under"><a class="link-reverse phs" href="#">For Writing Teachers</a></p>
     {% else %}
