--- a/_includes/smallheader.html
+++ b/_includes/smallheader.html
@@ -2,7 +2,7 @@
   <div class="mlm v-mid">
     <div class="dib v-mid mw4 svg-logo-min-height mw-12-ns">
       <a href="/" class="fade" title="home">
-        <!--min-height to force Firefox to display the .svg --!>
+        <!--min-height to force Firefox to display the .svg -->
         <img style="min-height:44px" alt="OneRoom logo" src="/img/logo.svg"></a>
     </div>
     <div class="fr">
