stronger hover state for all!

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,14 +8,14 @@
     {% endif %}
 
     {% if page.title == "blog" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">Blog</a></p>
+      <p class="dib under"><a class="link-reverse phs fade" href="#">Blog</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/blog.html">Blog</a></p>
+      <p class="dib"><a class="link-reverse phs fade" href="/blog.html">Blog</a></p>
     {% endif %}
 
     {% if page.title == "about" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">About</a></p>
+      <p class="dib under"><a class="link-reverse phs fade" href="#">About</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/about.html">About</a></p>
+      <p class="dib"><a class="link-reverse phs fade" href="/about.html">About</a></p>
     {% endif %}
 </nav>
