--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="center mw7 phm phl-ns pvxs fw4 tc">
-    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
+    <p class="dib"><a class="link-reverse phs fade" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
 
     {% if page.title == "writing" %}
       <p class="dib under"><a class="link-reverse phs fade" href="#">How It Works</a></p>
