hover state underline for page links

--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -15,7 +15,7 @@
 .link:active  { color: $blue; }
 
 .link-reverse {
-  text-decoration: none;
+  text-decoration: underline;
   transition: all .4s;
 }
 
