--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,21 +1,21 @@
 <nav class="center mw7 phm phl-ns pvxs fw4 tc">
-    <p class="dib"><a class="link-reverse phs fade" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
+    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
 
     {% if page.title == "writing" %}
-      <p class="dib under"><a class="link-reverse phs fade" href="#">How It Works</a></p>
+      <p class="dib under"><a class="link-reverse phs" href="#">How It Works</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs fade" href="/writing.html">How It Works</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/writing.html">How It Works</a></p>
     {% endif %}
 
     {% if page.title == "blog" %}
-      <p class="dib under"><a class="link-reverse phs fade" href="#">Blog</a></p>
+      <p class="dib under"><a class="link-reverse phs" href="#">Blog</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs fade" href="/blog.html">Blog</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/blog.html">Blog</a></p>
     {% endif %}
 
     {% if page.title == "about" %}
-      <p class="dib under"><a class="link-reverse phs fade" href="#">About</a></p>
+      <p class="dib under"><a class="link-reverse phs" href="#">About</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs fade" href="/about.html">About</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/about.html">About</a></p>
     {% endif %}
 </nav>
