don't dim page link hover states

--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -21,7 +21,7 @@
 
 .link-reverse:link    { color: $white; }
 .link-reverse:visited { color: $white; }
-.link-reverse:hover   { color: $near-white; text-decoration: underline }
+.link-reverse:hover   { color: $white; text-decoration: underline }
 .link-reverse:active  { color: $near-white; }
 
 .underline { text-decoration: underline; }
