--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,9 +2,9 @@
     <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
 
     {% if page.title == "writing" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">How It Works</a></p>
+      <p class="dib under"><a class="link-reverse phs" href="#">For Writers</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/writing.html">How It Works</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/writing.html">For Writers</a></p>
     {% endif %}
 
     {% if page.title == "blog" %}
