--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A live online video classroom enabling rich interaction and discussion.">
+    <meta name="description" content="Online classes, revolutionized. Live, face-to-face video classrooms built to inspire rich interaction and discussion.">
     <meta name="author" content="oneroom">
     <title>OneRoom {% if page.title %} | {{ page.title }} {% endif %}</title>
     <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
