--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: master
   <div class="mtm">
   <h1>{{ page.title }}</h1>
   <div class="lh">
-      <img class="img mw2 v-mid box br-circ ba bw1 bw0-ns b--near-white mrm" src="/img/{{ page.image }}"></img>
+      <img class="img mw2 v-mid box br-100 ba bw1 bw0-ns b--near-white mrm" src="/img/{{ page.image }}"></img>
       <p class="dib v-mid">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
   </div>
   <div class="lh-copy pts post">
