Adds basic styling for class cards

--- a/css/oneroom.scss
+++ b/css/oneroom.scss
@@ -15,6 +15,7 @@
 @import "border_style";
 @import "border_widths";
 @import "buttons";
+@import "class_card";
 @import "clears";
 @import "dimension_utilities";
 @import "display";
