--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-  <footer class="b--light-gray bw4 pbl ptm mtxl-ns" style="border-top: 1px solid #eee;">
+  <footer class="b--light-gray bw4 pbl ptm mtl" style="border-top: 1px solid #eee;">
     <div class="center mw7 phm phl-ns pvl fw4 tc">
       <p class="db dib-ns mrs fw1">&copy; 2014-2015 OneRoom</p>
       <a class="link phs" href="/">Home</a>
