--- a/css/oneroom.scss
+++ b/css/oneroom.scss
@@ -5,6 +5,7 @@
 @import "normalize";
 @import "queries";
 @import "colors";
+@import "avatars";
 @import "base";
 @import "box_sizing";
 @import "background_size";
