Renames 'class' to 'course' in code to avoid coding confusion

--- a/_sass/_course_card.scss
+++ b/_sass/_course_card.scss
@@ -1,4 +1,4 @@
-.class-card {
+.course-card {
   background-color: white;
   color: #999;
   border-radius: 6px;
@@ -13,7 +13,7 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   }
 
-  .class-image {
+  .course-image {
     background: url() center center;
     background-repeat: no-repeat;
     background-size: cover;
