--- a/_includes/coursecard.html
+++ b/_includes/coursecard.html
@@ -1,11 +1,11 @@
-<a href={{ class.classUrl }}>
-  <div class="class-card">
-    <div class="class-image" style="background:url({{ class.imageUrl }}) center center;">
+<a href={{ course.courseUrl }}>
+  <div class="course-card">
+    <div class="course-image" style="background:url({{ course.imageUrl }}) center center;">
       <div class="title-container">
         <div class="title-outer">
           <div class="title-inner">
             <h3>
-              {{ class.name }}
+              {{ course.name }}
             </h3>
           </div>
         </div>
@@ -13,16 +13,16 @@
     </div>
     <div class="info">
       <p class="f5 lh-copy">
-        {{ class.description }}
+        {{ course.description }}
       </p>
       <div class="teacher-info">
         <div class="teacher-avatar">
           <div class="avatar">
-            <div class="avatar-img" style="background: url({{ class.teacherPicUrl }}) no-repeat center center;"></div>
+            <div class="avatar-img" style="background: url({{ course.teacherPicUrl }}) no-repeat center center;"></div>
           </div>
         </div>
         <div class="teacher-name f5">
-          {{ class.teacherName }}
+          {{ course.teacherName }}
         </div>
       </div>
     </div>
