--- a/css/oneroom.scss
+++ b/css/oneroom.scss
@@ -16,7 +16,7 @@
 @import "border_style";
 @import "border_widths";
 @import "buttons";
-@import "class_card";
+@import "course_card";
 @import "clears";
 @import "dimension_utilities";
 @import "display";
