Centers header elements in smaller viewports

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="center mw7 phm phl-ns pvxs fw4 tc">
+<nav class="center mw-100 mw7-ns phm-ns phl-ns pvxs fw4 tc">
     <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
 
     {% if page.title == "writing" %}
