change About to The Team

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,8 +14,8 @@
     {% endif %}
 
     {% if page.title == "about" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">About</a></p>
+      <p class="dib under"><a class="link-reverse phs" href="#">The Team</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/about.html">About</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/about.html">The Team</a></p>
     {% endif %}
 </nav>
