Makes video responsive

--- a/css/oneroom.scss
+++ b/css/oneroom.scss
@@ -35,6 +35,7 @@
 @import "widths";
 @import "overflow";
 @import "position";
+@import "responsive_video";
 @import "skins";
 @import "spacing";
 @import "text_decoration";
