--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,9 +13,9 @@
       <p class="dib"><a class="link-reverse phs" href="/blog.html">Blog</a></p>
     {% endif %}
 
-    {% if page.title == "about" %}
+    {% if page.title == "team" %}
       <p class="dib under"><a class="link-reverse phs" href="#">The Team</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/about.html">The Team</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/team.html">The Team</a></p>
     {% endif %}
 </nav>
