--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,10 @@
 <nav class="center mw-100 mw7-ns phm-ns phl-ns pvxs fw4 tc">
     <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
 
-    {% if page.title == "writing" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">For Writers</a></p>
+    {% if page.title == "how-it-works" %}
+      <p class="dib under"><a class="link-reverse phs" href="#">How it Works</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/writing.html">For Writers</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/writing.html">How it Works</a></p>
     {% endif %}
 
     {% if page.title == "blog" %}
