--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
     {% if page.title == "blog" %}
       <p class="dib under"><a class="link-reverse phs" href="#">Blog</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/blog.html">Blog</a></p>
+      <p class="dib"><a class="link-reverse phs" href="http://blog.joinoneroom.com">Blog</a></p>
     {% endif %}
 
     {% if page.title == "team" %}
