Updates writing page to more general <about>.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
     {% if page.title == "how-it-works" %}
       <p class="dib under"><a class="link-reverse phs" href="#">How it Works</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/writing.html">How it Works</a></p>
+      <p class="dib"><a class="link-reverse phs" href="/about.html">How it Works</a></p>
     {% endif %}
 
     {% if page.title == "blog" %}
