Adds signup/login to header

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,4 +18,6 @@
     {% else %}
       <p class="dib"><a class="link-reverse phs" href="/team.html">The Team</a></p>
     {% endif %}
+
+    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com">Sign Up or Log In</a></p>
 </nav>
