Updates header to white background

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,23 +1,11 @@
-<nav class="center mw-100 mw7-ns phm-ns phl-ns pvxs fw4 tc">
-    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
-
+<nav class="center mw-100 mw7-ns phm-ns phl-ns fw4 small tc">
     {% if page.title == "how-it-works" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">How it Works</a></p>
+      <p class="dib under"><a class="phs" href="#">How it Works</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/about.html">How it Works</a></p>
+      <p class="dib"><a class="link-blue phs" href="/about.html">How it Works</a></p>
     {% endif %}
 
-    {% if page.title == "blog" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">Blog</a></p>
-    {% else %}
-      <p class="dib"><a class="link-reverse phs" href="http://blog.joinoneroom.com">Blog</a></p>
-    {% endif %}
+    <p class="dib"><a class="link-blue phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
 
-    {% if page.title == "team" %}
-      <p class="dib under"><a class="link-reverse phs" href="#">The Team</a></p>
-    {% else %}
-      <p class="dib"><a class="link-reverse phs" href="/team.html">The Team</a></p>
-    {% endif %}
-
-    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com">Sign Up or Log In</a></p>
+    <p class="dib"><a class="link-blue phs" href="http://app.joinoneroom.com">My Classes</a></p>
 </nav>
