--- a/_includes/smallheader.html
+++ b/_includes/smallheader.html
@@ -1,9 +1,9 @@
-<header class="bg-green pvm">
+<header class="bg-white pvm">
   <div class="mlm v-mid tc tl-ns">
     <div class="dib v-mid mw4 svg-logo-min-height mw-12-ns">
       <a href="/" class="fade" title="home">
         <!--min-height to force Firefox to display the .svg -->
-        <img style="min-height:44px" alt="OneRoom logo" src="/img/logo.svg"></a>
+        <img style="min-height: 32px" alt="OneRoom" src="/img/logo.svg"></a>
     </div>
     <div class="fr-ns">
       {% include navbar.html %}
