Adds PureCSS grid
- Adds PureCSS grid to stay consistent with our app and make it easy to
build mobile friendly pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
     <title>OneRoom {% if page.title %} | {{ page.title }} {% endif %}</title>
     <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,800,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/g/pure@0.6.0(base-min.css+grids-min.css+grids-responsive-min.css)">
     <link href="/css/oneroom.css" rel="stylesheet">
     <link href="/img/favicon.ico" rel="shortcut icon"/>
   </head>
