--- a/_sass/_font_family.scss
+++ b/_sass/_font_family.scss
@@ -4,8 +4,19 @@
 
 */
 
+// From http://cssfontstack.com
+
 body,
 .sans-serif  {  font-family: 'Merriweather Sans', helvetica, 'helvetica neue', Roboto, arial, sans-serif; }
 .serif       {  font-family: "Merriweather", georgia, serif; }
 
-// From http://cssfontstack.com
+/*
+When setting the primary font stack, apply it to the Pure grid units along
+with `html`, `button`, `input`, `select`, and `textarea`. Pure Grids use
+specific font stacks to ensure the greatest OS/browser compatibility.
+*/
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+    /* Set your content font stack here: */
+    font-family: 'Merriweather Sans', helvetica, 'helvetica neue', Roboto, arial, sans-serif;
+}
