--- a/_sass/_type_scale.scss
+++ b/_sass/_type_scale.scss
@@ -2,6 +2,7 @@
    TYPE SCALE
    ========================================================================== */
 .mega  { font-size: 4rem; }
+.f0    { font-size: 3rem; }
 .f1    { font-size: 2rem; }
 .f2    { font-size: 1.5rem; }
 .f3    { font-size: 1.25rem; }
@@ -13,6 +14,7 @@
 
 @include break(not-small){
  .mega-ns { font-size: 4rem; }
+ .f0-ns    { font-size: 3rem; }
  .f1-ns {   font-size: 2rem; }
  .f2-ns {   font-size: 1.5rem; }
  .f3-ns {   font-size: 1.25em; }
@@ -22,6 +24,7 @@
 
 @include break(medium) {
  .mega-m { font-size: 4rem; }
+ .f0-m    { font-size: 3rem; }
  .f1-m {   font-size: 2rem; }
  .f2-m {   font-size: 1.5rem; }
  .f3-m {   font-size: 1.25rem; }
@@ -31,6 +34,7 @@
 
 @include break(large) {
  .mega-l { font-size: 4rem; }
+ .f0-l    { font-size: 3rem; }
  .f1-l   { font-size: 2rem; }
  .f2-l   { font-size: 1.5rem; }
  .f3-l   { font-size: 1.25rem; }
