--- a/_includes/smallheader.html
+++ b/_includes/smallheader.html
@@ -1,4 +1,4 @@
-<header class="bg-white pvm">
+<header class="bg-white pvm bb b--light-gray">
   <div class="mlm v-mid tc tl-ns">
     <div class="dib v-mid mw4 svg-logo-min-height mw-12-ns">
       <a href="/" class="fade" title="home">
