--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,27 @@
-  <footer class="b--light-gray bw4 pbl ptm mtl" style="border-top: 1px solid #eee;">
-    <div class="center mw7 phm phl-ns pvl fw4 tc">
-      <p class="db dib-ns mrs fw1">&copy; 2014-2015 OneRoom</p>
+  <footer class="bg-near-white bw4 pbl pvm mtn" style="border-top: 1px solid #eee;">
+    <div class="center mw7 phm phl-ns pvm fw4 tc small">
       <a class="link phs" href="/">Home</a>
+      <a class="link phs" href="/about.html">How it works</a>
+      <a class="link phs" href="http://app.joinoneroom.com/course">Browse classes</a>
+      <a class="link phs" href="/blog">Blog</a>
       <a class="link phs" href="https://angel.co/oneroom/jobs">Jobs</a>
+      <a class="link phs" href="/team.html">The team</a>
       <a class="link phs" href="mailto:scott@joinoneroom.com">Contact</a>
-      <a class="link phs" href="https://twitter.com/intent/user?screen_name=joinoneroom" target="_blank"><img class="img mw2 v-mid" src="/img/twitter-icon.svg"/></a>
-       <a class="link phs" href="https://www.facebook.com/joinoneroom" target="_blank"><img class="img mw2 v-mid" src="/img/facebook_icon_edit.png"/></a>
+    </div>
+    <div class="center mw7 phm phl-ns pvm fw4 tc">
+      <a class="link phs" href="https://twitter.com/intent/user?screen_name=joinoneroom" target="_blank">
+        <img class="img mw2 v-mid" src="/img/twitter-icon.svg"/>
+      </a>
+      <a class="link phs" href="https://www.facebook.com/joinoneroom" target="_blank">
+        <img class="img mw2 v-mid" src="/img/facebook_icon_edit.png"/>
+      </a>
+    </div>
+    <div class="center mw6 phm phl-ns pts fw4 tc light-gray">
+      <blockquote>
+        “Tell me and I forget, teach me and I may remember, involve me and I learn.”
+        <cite class="small db mts">― Benjamin Franklin</cite>
+      </blockquote>
+      <p class="db dib-ns mrs fw1 small">&copy; 2014-2015 OneRoom</p>
     </div>
   </footer>
   {% include intercom.html %}
