Minor styling cleanup

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-  <footer class="bg-near-white bw4 pbl pvm mtn" style="border-top: 1px solid #eee;">
+  <footer class="bg-near-white bw4 pvl mtn" style="border-top: 1px solid #eee;">
     <div class="center mw7 phm phl-ns pvm fw4 tc small">
       <a class="link phs" href="/">Home</a>
       <a class="link phs" href="/about.html">How it works</a>
