Minor style change to comparison table

--- a/_includes/comparison-table.html
+++ b/_includes/comparison-table.html
@@ -2,9 +2,9 @@
   <thead>
     <tr>
         <th class="bg-near-white"></th>
-        <th class="tc v-mid silver">Traditional classroom</th>
-        <th class="tc v-mid silver">MOOCs</th>
-        <th class="tc v-mid silver">YouTube</th>
+        <th class="tc v-mid silver fw4">Traditional classroom</th>
+        <th class="tc v-mid silver fw4">MOOCs</th>
+        <th class="tc v-mid silver fw4">YouTube</th>
         <th class="bg-green white wi-25 tc v-mid">OneRoom</th>
     </tr>
   </thead>
