Moves content into single 'How it works' page

--- a/_includes/comparison-table.html
+++ b/_includes/comparison-table.html
@@ -13,7 +13,7 @@
         <td><img style="width: auto; height: auto;" src="/img/icon-check-gray.png" /></td>
         <td></td>
         <td></td>
-        <td><img style="width: auto; height: auto;" src="/img/icon-check.png" /></td>
+        <td class="bg-blue"><img style="width: auto; height: auto;" src="/img/icon-check.png" /></td>
     </tr>
     <tr>
         <th>
@@ -37,9 +37,9 @@
     </tr>
     <tr>
         <th style="border-bottom-width: 0;">Price</th>
-        <td>$$$</td>
-        <td>Free - $$$</td>
-        <td>Free</td>
-        <td>$</td>
+        <td><span class="small">$$$</span></td>
+        <td><span class="small">Free - $$$</span></td>
+        <td><span class="small">Free</span></td>
+        <td><span class="small">$</span></td>
     </tr>
 </table>
