--- a/_includes/howitworks.html
+++ b/_includes/howitworks.html
@@ -1,21 +1,16 @@
-<section class="mvxl mhm">
-  <h2 class="mw-75-ns center f3 fw7 tc dark-blue mbl">OneRoom connects people who are interested in learning the same stuff.</h2>
-  <div class="tc">
-    <img src="img/what-is-oneroom.png" style="max-width: 856px;" />
-  </div>
-</section>
+<div class="tc wi-100 wi-75-ns center mid-gray f4">
+  
+</div>
 
-<section class="mvxl mhm">
-  <h2 class="mw-75-ns center f3 fw7 tc dark-blue mbl">Sessions usually go something like this.</h2>
-  <div class="tc">
-    <img src="img/typical-class.png" style="max-width: 833px;" />
-    <h4 class="light-silver fw4 mtl">(Sessions are 20 to 45 minutes long)</h4>
-  </div>
-</section>
+<div class="mvxl mhm tc">
+  <h3 class="mw-75-ns center f3 fw4 tc silver mbn">Sessions usually go something like this.</h3>
+  <h4 class="light-silver fw4">(Sessions are 20 or 40 minutes long)</h4>
+  <img src="../img/typical-class.png" style="max-width: 833px;" />
+</div>
 
-<section class="mbl mtxl mhm">
-  <h2 class="mw-75-ns center f3 fw7 tc dark-blue mbl">Connect with people from anywhere in the world who are passionate about the same topics.</h2>
+<div class="mbl mtxl mhm">
+  <h3 class="mw-75-ns center f3 fw4 tc silver mbl">Connect with people from anywhere in the world who are passionate about the same topics.</h3>
   <div class="tc">
-    <img src="img/class-location.png" style="max-width: 650px;" />
+    <img src="../img/class-location.png" style="max-width: 650px;" />
   </div>
-</section>
+</div>
