--- a/_includes/smallheader.html
+++ b/_includes/smallheader.html
@@ -1,12 +1,21 @@
-<header class="bg-white pvm bb b--light-gray">
-  <div class="mlm v-mid tc tl-ns">
+<header class="bg-white pos-fix wi-100" style="z-index: 1000;">
+  <div class="pvs v-mid tc tl-ns bb b--light-gray">
     <div class="dib v-mid mw4 svg-logo-min-height mw-12-ns">
       <a href="/" class="fade" title="home">
-        <!--min-height to force Firefox to display the .svg -->
-        <img style="min-height: 32px" alt="OneRoom" src="/img/logo.svg"></a>
+        <!--height to force Firefox to display the .svg -->
+        <img style="height: 40px" alt="OneRoom" src="/img/logo.svg"></a>
     </div>
     <div class="fr-ns">
       {% include navbar.html %}
     </div>
+  </div>
+  <div class="bg-aqua-light center pam tc small">
+    <ul class="list man">
+      <li class="dib phl"><a href="#overview" class="link-blue">Overview</a></li>
+      <li class="dib phl"><a href="#classroom" class="link-blue">The classroom</a></li>
+      <li class="dib phl"><a href="#format" class="link-blue">Class format</a></li>
+      <li class="dib phl"><a href="#difference" class="link-blue">How we’re different</a></li>
+      <li class="dib phl"><a href="#faq" class="link-blue">FAQ</a></li>
+    </ul>
   </div>
 </header>
