--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,11 +1,11 @@
-<nav class="center mw-100 mw7-ns phm-ns phl-ns fw4 small tc">
+<nav class="center mw-100 mw7-ns phm-ns phl-ns fw4 tc small mtm">
     {% if page.title == "how-it-works" %}
-      <p class="dib under"><a class="phs" href="#">How it works</a></p>
+      <p class="dib under man"><a class="phs" href="/how-it-works">How it works</a></p>
     {% else %}
-      <p class="dib"><a class="link-blue phs" href="/about.html">How it works</a></p>
+      <p class="dib man"><a class="link-blue phs" href="/how-it-works">How it works</a></p>
     {% endif %}
 
-    <p class="dib"><a class="link-blue phs" href="http://app.joinoneroom.com/course">Browse classes</a></p>
+    <p class="dib man"><a class="link-blue phs" href="http://app.joinoneroom.com/course">Browse classes</a></p>
 
-    <p class="dib"><a class="link-blue phs" href="http://app.joinoneroom.com">My classes</a></p>
+    <p class="dib man"><a class="link-blue phs" href="http://app.joinoneroom.com">My classes</a></p>
 </nav>
