Updates links to point to www instead of app

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,10 @@
 <nav class="center mw-100 mw7-ns phm-ns phl-ns pvxs fw4 tc">
-    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/course">Browse Classes</a></p>
+    <p class="dib"><a class="link-reverse phs" href="https://www.joinoneroom.com/course">Browse Classes</a></p>
 
     {% if page.title == "how-it-works" %}
       <p class="dib under"><a class="link-reverse phs" href="#">How it Works</a></p>
     {% else %}
-      <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com/how-it-works">How it Works</a></p>
+      <p class="dib"><a class="link-reverse phs" href="https://www.joinoneroom.com/how-it-works">How it Works</a></p>
     {% endif %}
 
     {% if page.title == "blog" %}
@@ -19,5 +19,5 @@
       <p class="dib"><a class="link-reverse phs" href="/team.html">The Team</a></p>
     {% endif %}
 
-    <p class="dib"><a class="link-reverse phs" href="http://app.joinoneroom.com">Sign Up or Log In</a></p>
+    <p class="dib"><a class="link-reverse phs" href="https://www.joinoneroom.com">Sign Up or Log In</a></p>
 </nav>
