Uses / instead of /course

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="center mw-100 mw7-ns phm-ns phl-ns pvxs fw4 tc">
-    <p class="dib"><a class="link-reverse phs" href="https://www.joinoneroom.com/course">Browse Classes</a></p>
+    <p class="dib"><a class="link-reverse phs" href="https://www.joinoneroom.com/">Browse Classes</a></p>
 
     {% if page.title == "how-it-works" %}
       <p class="dib under"><a class="link-reverse phs" href="#">How it Works</a></p>
